--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     repositories { jcenter() }
     dependencies {
         classpath 'se.transmode.gradle:gradle-docker:1.2'
-        classpath "com.avast.gradle:gradle-docker-compose-plugin:0.7.1"
+        classpath "com.avast.gradle:gradle-docker-compose-plugin:0.10.9"
     }
 }
 
@@ -18,24 +18,29 @@ repositories {
 apply plugin: 'docker'
 apply plugin: 'docker-compose'
 apply plugin: 'groovy'
-apply plugin: 'maven-publish'
+apply plugin: 'maven'
 apply plugin: 'jacoco'
 apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'project-report'
 
-
-
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     compile gradleApi()
     compile localGroovy()
 
+    compile group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '2.2.5.RELEASE'
     //docker dependencies
-    compile group: 'com.avast.gradle', name: 'gradle-docker-compose-plugin'
-    compile group: 'se.transmode.gradle', name: 'gradle-docker'
-
+    compile group: 'com.avast.gradle', name: 'gradle-docker-compose-plugin', version: '0.9.5'
+    compile group: 'se.transmode.gradle', name: 'gradle-docker', version: '1.2'
     //test dependencies
     compile group: 'org.unbroken-dome.gradle-plugins', name: 'gradle-testsets-plugin', version: '1.5.1'
 }
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: mavenLocal().url)
+        }
+    }
+}
+
